# key.board

./: .gitattributes  .gitmodules  README.md  UserGuide.md  next.config.js  package.json  pnpm-lock.yaml
src-arduino/examples/pn532_read/: pn532_read.ino
src-arduino/examples/read_rfid/: read_rfid.ino
src-esp/: README.md  data.csv  sdkconfig  sdkconfig.old
src-esp/main/: CMakeLists.txt  cards.c  cards.h  comms.c  comms.h  constants.h  keyboard.c  keyboard.h  keyboard_ops.c  keyboard_ops.h  main.h  tusb_hid_example_main.c
src-esp/main/led/: blink_time.h  demo_led.c  generate_blink_time_file.py  keydot_led.c  keydot_led.h
src-esp/main/rfid/: mfrc522.c  mock_rfid.cpp  mrfc522.c  pn532.c  rfid.h
src-esp/main/util/: profile.c  profile.h
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  serial.rs  test.c
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/create/: page.tsx
src/components/: CardsView.tsx  Navbar.tsx
src/lib/: models.ts  services.ts  utils.ts
src/pages/: _app.tsx  create.tsx  index.tsx  load-main.tsx  main.tsx  ports.tsx  sync.tsx
src/pages/edit/: [id].tsx
src/styles/: globals.css
